bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var x:Boolean = false
^BDR:1: error: Missing closing brace `}' assumed here
var x:Boolean = false
^BDR:1: error: expected class or object definition
var x:Boolean = false
^BDR:2: error: expected class or object definition
while (x == false) {
^BDR:5: error: Missing closing brace `}' assumed here
  if (litMessage():String == "I")  {gauche();gauche();avance();
  ^BDR:6: error: Missing closing brace `}' assumed here
  if (litMessage():String == "A")  {avance();
  ^BDR:7: error: Missing closing brace `}' assumed here
  if (litMessage():String == "B") {avance();avance();
  ^BDR:8: error: Missing closing brace `}' assumed here
  if (litMessage():String == "C") {avance();avance();avance();
  ^BDR:9: error: Missing closing brace `}' assumed here
  if (litMessage():String == "Z") {recule();
  ^BDR:10: error: Missing closing brace `}' assumed here
  if (litMessage():String == "Y" ) {recule();recule();
  ^BDR:11: error: Missing closing brace `}' assumed here
  if (litMessage():String == "X") {recule();recule();recule();
  ^